[package]
name = "ssh-nicety"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
confy = { git = "https://github.com/rust-cli/confy", rev = "faab0c9d561a014e844349df6b78c6df3e4d1cd9" }
lazy_static = "1.4.0"
listenfd = "0.3.3"
secstr = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1.5"

[lib]
name = "ssh_nicety_common"
path = "src/lib.rs"
